crates/proef-cli/tests/snapshots/corpus__artifact__510-api-search-matrix--search-over-clients-returns-200.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — Search over clients returns 200
# source: tests/features/510_api_search_matrix.feature:15
# replay: hurl --test 510-api-search-matrix--search-over-clients-returns-200.hurl --variables-file 510-api-search-matrix--search-over-clients-returns-200.vars --secret apiToken=<value>

# tests/features/510_api_search_matrix.feature:8 — the client environment is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/510_api_search_matrix.feature:8 — the client environment is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/510_api_search_matrix.feature:16 — the admin searches for Bakker (search clients for Bakker)
GET http://127.0.0.1:8787/api/v1/admin/search/clients
Authorization: Bearer {{apiToken}}
[Query]
q: Bakker
HTTP *
[Asserts]
status == 200
