crates/proef-cli/tests/snapshots/corpus__artifact__510-api-search-matrix--search-over-clients-returns-200.vars.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef variables for 510-api-search-matrix--search-over-clients-returns-200.hurl
# secret `apiToken` — supply at replay: --secret apiToken=<value>
