crates/proef-cli/tests/snapshots/corpus__artifact__510-api-search-matrix--search-over-missing-returns-404.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — Search over missing returns 404
# source: tests/features/510_api_search_matrix.feature:15
# replay: hurl --test 510-api-search-matrix--search-over-missing-returns-404.hurl --variables-file 510-api-search-matrix--search-over-missing-returns-404.vars

# tests/features/510_api_search_matrix.feature:8 — the client environment is provisioned (fixture warm-up probe)
# optional
GET http://127.0.0.1:8787/health
HTTP 200

# tests/features/510_api_search_matrix.feature:8 — the client environment is provisioned (provision the environment)
POST http://127.0.0.1:8787/api/v1/env/provision
Authorization: Bearer {{apiToken}}
{"run": "proef-snapshot"}
HTTP 201
[Captures]
envId: jsonpath "$.id"

# tests/features/510_api_search_matrix.feature:16 — the admin searches for nobody (search missing for nobody)
GET http://127.0.0.1:8787/api/v1/admin/search/missing
Authorization: Bearer {{apiToken}}
[Query]
q: nobody
HTTP *
[Asserts]
status == 404
